--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,5 +306,19 @@ footer {
     }
 
 
+    /* For medium screen sizes from 950px and down */
+
+    @media screen and (max-width: 950px) {
+
+        #menu {
+            clear: left;
+            float: left;
+            margin-left: 30px;
+            margin-bottom: 20px;
+            line-height: 25px;
+        }
+    }
+
+
     
 
