--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,6 +349,21 @@ footer {
             padding: 0 20px;
         }
 
+        #photos {
+            column-count: 3;
+
+        }
+
+    }
+
+/* For smaller screen sizes 800px and down */
+
+    @media screen and (max-width: 800px ) {
+
+        #photos {
+            column-count: 2;
+
+        }
     }
 
 
